--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             “Lorem ipsum dolor sit amet consectetur. Elementum arcu hac massa dapibus condimentum dictum facilisi.
             Egestas tellus pretium ut diam nisl.”
           </p>
-          <p class="text-wrapper-5">
+          <p class="text-wrapper-5" id="description-1">
             Lorem ipsum dolor sit amet consectetur. Elementum arcu hac massa dapibus condimentum dictum facilisi.
             Egestas tellus pretium ut diam nisl.
           </p>
-          <p class="text-wrapper-6">
+          <p class="text-wrapper-6" id="description-2">
             Lorem ipsum dolor sit amet consectetur. Elementum arcu hac massa dapibus condimentum dictum facilisi.
             Egestas tellus pretium ut diam nisl.
           </p>
@@ -60,8 +60,8 @@
               <img class="png" src="img/png2.png" />
             </div>
           </div>
-          <div class="text-wrapper-7">About me</div>
-          <div class="text-wrapper-8">Skills</div>
+          <div class="text-wrapper-7" id="title">About me</div>
+          <div class="text-wrapper-8" id="skill-text">Skills</div>
           <div class="group-2">
             <p class="text-wrapper-9">Lorem ipsum dolor sit amet consectetur.</p>
             <div class="text-wrapper-10">Service</div>
@@ -375,7 +375,7 @@
             <img class="img-2" src="img/Isolation_Mode.png" />
             <img class="img-2" src="img/Graphic_Elements-1.png" />
           </div>
-          <div class="frame-8">
+          <div class="frame-8" id="skill-img">
             <div class="img-wrapper">
               <img class="graphic-elements" src="img/logo ps.png" />
             </div>
@@ -393,17 +393,20 @@
             </div>
           </div>
           <div class="frame-9">
-            <div class="group-38">
-              <div class="overlap-group-7"><div class="text-wrapper-63">About me</div></div>
+            <div class="group-38" id="about-me-button">
+              <div class="overlap-group-7">
+                <div class="text-wrapper-63">About me</div>
+                <img src="img/Rectangle 10.png" />
+              </div>
             </div>
-            <div class="group-39">
+            <div class="group-39" id="education-button">
               <div class="overlap-17">
                 <div class="text-wrapper-64">Education</div>
                 <img src="img/Rectangle 10.png" />
               </div>
             </div>
-            <div class="group-39">
-              <div class="overlap-18">
+            <div class="group-39" id="experience-button">
+              <div class="overlap-17">
                 <div class="text-wrapper-65">Experience</div>
                 <div class="rectangle-12"></div>
               </div>
@@ -412,5 +415,7 @@
         </div>
       </div>
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
